# rag-chatbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  test.ipynb  test.py
.circleci/: config.yml
.github/: dependabot.yml
.github/actions/build-python/: action.yaml
.github/actions/package-container/: action.yaml
.github/actions/setup-poetry-env/: action.yaml
.github/workflows/: build.yaml  ci.yaml  python-app.yml
app/: Dockerfile  pyproject.toml  requirements.txt
app/app/: main.py
chatbot/: Dockerfile  pyproject.toml  requirements.txt
chatbot/chatbot/: app.py
docker/: Dockerfile
notebooks/: kaggle.ipynb
rag_chatbot/: __init__.py  __main__.py  logger.py  ollama.py  pipeline.py
rag_chatbot/core/: __init__.py
rag_chatbot/core/embedding/: embedding.py
rag_chatbot/core/engine/: __init__.py  chat.py  compact.py  engine.py  retriever.py
rag_chatbot/core/ingestion/: __init__.py  ingestion.py
rag_chatbot/core/model/: model.py
rag_chatbot/core/prompt/: __init__.py  qa_prompt.py  select_prompt.py
rag_chatbot/core/vector_store/: __init__.py  vector_store.py
rag_chatbot/embedding/: __init__.py  embedding.py
rag_chatbot/engine/: __init__.py  base.py  chat.py  compact.py  retrieve.py  retriever.py  summary.py
rag_chatbot/eval/: __init__.py  __main__.py  evaluator.py  qa_generator.py
rag_chatbot/ingest/: __init__.py  ingest.py
rag_chatbot/ingestion/: __init__.py  ingest.py  ingestion.py  vector_store.py
rag_chatbot/model/: __init__.py  model.py
rag_chatbot/prompt/: __init__.py  hyde_prompt.py  qa_prompt.py  query_gen_prompt.py  select_prompt.py
rag_chatbot/rag/: embedding.py  pipeline.py  vector_store.py
rag_chatbot/setting/: __init__.py  setting.py
rag_chatbot/ui/: __init__.py  theme.py  ui.py
rag_chatbot/vector_store/: __init__.py  vector_store.py
scripts/: install.sh  install_extra.sh  run.sh
src/: Dockerfile  app.py  ollama.py  pyproject.toml  requirements.txt
src/chatbot/: __init__.py
src/chatbot/model/: __init__.py  model.py
src/chatbot/prompt/: __init__.py  prompt.py  qa_prompt.py  query_gen.py  query_gen_prompt.py  rerank_prompt.py
src/chatbot/rag/: __init__.py  embedding.py  model.py  pipeline.py  prompt.py  rag.py  vector_store.py
